<resources>
    <!-- LogIn activity -->
    <string name="app_name">Умный дом</string>
    <string name="smart_house">Умный дом</string>
    <string name="ip_address">IP адресс сервера</string>
    <string name="password">Введите пароль</string>
    <string name="connect">Подключиться</string>
    <string name="wrong_password">Неверный пароль или нет соединения с сервером</string>
    <string name="remember_me">Запомнить данные</string>

    <!-- Kitchen fragment -->
    <string name="kitchen">КУХНЯ</string>
    <string name="smoke_sensor">Датчик дыма</string>

    <!-- Bathroom fragment -->
    <string name="bathroom">ВАННА</string>
    <string name="leakage_sensor">Датчик протечки</string>

    <!-- Hall fragment -->
    <string name="hall">ЗАЛ</string>
    <string name="refresh">Обновить</string>

    <!-- garage fragment -->
    <string name="garage">ГАРАЖ</string>
    <string name="gate">Ворота:</string>
    <string name="gate_open">открыто</string>
    <string name="gate_close">закрыто</string>

    <!-- alarm and security fragment -->
    <string name="alarms">БЕЗОПАСНОСТЬ</string>
    <string name="security_mode">Охранный режим</string>
    <string name="silence_mode">Звук сигнализации</string>
    <string name="alarm_ind">Сигнализация</string>

    <!-- Lamp toggle button -->
    <string name="on">Вкл</string>
    <string name="off">Выкл</string>

    <string name="temperature">Температура:</string>
    <string name="humidity">Влажность:</string>

    <string name="not_available">N/A</string>


</resources>
