<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/garage"
        android:textSize="40sp"
        android:textStyle="bold" />

    <ToggleButton
        android:id="@+id/tbLampGarage"
        style="@style/toggleButtonLamp"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="82dp"
        android:checked="false"
        android:textOff=""
        android:textOn=""
        android:textSize="18sp"
        android:textStyle="bold" />

    <Switch
        android:id="@+id/swtGate"
        android:layout_width="230dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="205dp"
        android:showText="true"
        android:splitTrack="true"
        android:text="@string/gate"
        android:textOff="@string/gate_close"
        android:textOn="@string/gate_open"
        android:textSize="24sp" />

</RelativeLayout>