<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/alarms"
        android:textAlignment="center"
        android:textSize="40sp"
        android:textStyle="bold" />

    <CheckBox
        android:id="@+id/cbSecure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="75dp"
        android:text="@string/security_mode"
        android:textSize="30sp" />

    <CheckBox
        android:id="@+id/cbSound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="126dp"
        android:checked="true"
        android:text="@string/silence_mode"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="191dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/alarm_ind"
            android:textSize="24sp" />

        <ImageView
            android:id="@+id/imageView"

            android:layout_width="70dp"
            android:layout_height="70dp"
            android:contentDescription="@null"
            app:srcCompat="@drawable/ic_green" />

    </LinearLayout>

</RelativeLayout>